--- a/exercicio 1/style/index.css
+++ b/exercicio 1/style/index.css
@@ -12,7 +12,8 @@
     margin-top: 5%;
     margin-bottom: 5%;
     width: 33%;
-    max-width: 300px;
+    max-width: 500px;
+    min-width: 250px;
     height:auto;
     border-radius: 1ch;
 }
@@ -48,13 +49,16 @@ form {
 }
 
 input {
-    width: 75%;
+    width: 80%;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 0%;
+    padding-right: 0%;
     border-top: hidden;
-    border-left: hidden;
-    border-right: hidden;
+    border-left: 0px;
+    border-right: 0px;
     border-color: rgb(218, 216, 216);
 }
 
