--- a/exercicio 2/style/index.css
+++ b/exercicio 2/style/index.css
@@ -3,4 +3,109 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+h1{
+    text-align: left;
+    font-size: 2rem;
+    font-family: “Arial Black”, sans-serif;
+    margin-bottom: 5%;
+    font-weight: bold;
+}
+
+.subTitulo{
+    color: rgb(143, 143, 143);
+}
+
+.CaixaTopo{
+    margin-bottom: 10%;
+    margin-left: 10%;
+}
+
+.typeIn1{
+    width: 95%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    padding-left: 10px;
+    padding-right: 0;
+    border-color: rgb(218, 216, 216);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.typeIn2{
+    width: 95%;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    padding-left: 10px;
+    padding-right: 0;
+    border-color: rgb(218, 216, 216);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+    border-top: hidden;
+    margin-bottom: 3%;
+}
+
+.checkboxCrua{
+    margin: 0;
+}
+
+.checkboxLogin{
+    font-size: 0.8rem;
+    margin-left: 1%;
+}
+
+.forgotPassword{
+    float: right;
+    margin-right: 2%;
+}
+
+form{
+    margin-bottom: 15%;
+    margin-left: 10%;
+}
+
+.separadorLogin{
+    width: 100%;
+    text-align: center;
+}
+
+.img{
+    width: 50%;
+    height: 100vh;
+    margin-left: 6%;
+    padding: 0;
+}
+
+.Logins > *{
+    width: 90%;
+    margin: 0;
+    margin-bottom: 2%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    margin-left: 10%;
+    border-style: none;
+}
+
+.LoginCru{
+    background-color: #0678FA;
+}
+
+.LoginFace{
+    background-color: #375596;
+}
+
+.LoginTwit{
+    background-color: #13A0F0;
+}
+
+.LoginGoog{
+    background-color: #E64136;
 }
