--- a/exercicio 4/style/index.css
+++ b/exercicio 4/style/index.css
@@ -1,6 +1,86 @@
 .geral {
+    background: rgb(65,135,210);
+    background: linear-gradient(133deg, rgba(65,135,210,1) 0%, rgba(125,80,180,1) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+.quadrado {
+    background-color: white;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 33%;
+    max-width: 500px;
+    min-width: 250px;
+    height:auto;
+    border-radius: 1ch;
+}
+
+.textinho {
+    font-size: 0.8rem;
+    margin-bottom: 3rem;
+    display: grid;
+    place-items: center;
+}
+
+main {
+    margin-top: 5%;
+}
+
+button {
+    background: rgb(65,135,210);
+    background: linear-gradient(90deg, rgba(65,135,210,1) 0%, rgba(125,80,180,1) 100%);
+    width: 80%;
+    border: hidden;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    color: white;
+    margin-bottom: 20%;
+    margin-top: 5%;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2rem;
+    font-family: “Arial Black”, sans-serif;
+    margin-top: 20%;
+    margin-bottom: 10%;
+    font-weight: bold;
+}
+
+form {
+    display: grid;
+    place-items: center;
+}
+
+input {
+    width: 80%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 0%;
+    padding-right: 0%;
+    border-top: hidden;
+    border-left: 0px;
+    border-right: 0px;
+    border-color: rgb(218, 216, 216);
+}
+
+span{
+    color: rgb(143, 143, 143);
+}
+
+a{
+    color: rgb(69, 69, 226);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+input:focus{
+    outline: none;
+    border-color: purple;
+    color: purple;
 }
